fixed z-index positions in landing page.

--- a/client/src/scss/App.css
+++ b/client/src/scss/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .landing {
@@ -16,18 +17,17 @@
 .dark-overlay {
   height: 100%;
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.35);
 }
 
-.landingText h1 {
+.landingHeader {
   height: 150px;
-  font-family: 'Courier New', Courier, monospace;
   color: rgba(255, 255, 255, 0.952);
   position: relative;
-  animation: move-header, blink-header 0.5s linear infinite;
+  animation: move-header, blink-header 1s linear infinite;
   animation-duration: 3s;
   animation-fill-mode: forwards;
 }
@@ -45,4 +45,15 @@
   50% {
     opacity: 0;
   }
+}
+
+.landingLinks {
+  position: relative;
+  z-index: 1;
+}
+
+.btn {
+  background-color: teal;
+  padding: 5px 5px;
+  margin: 5px 5px;
 }
